# elevan-labs-mcp

./: .env.example  CHANGELOG.md  Makefile  QUICK_START.md  README.md  demo.py  examples.py  main.py  mcp_config.json  pyproject.toml  start_server.sh  test_setup.py
.github/workflows/: ci.yml  publish.yml
elevan_labs_mcp/: __init__.py  config.py  server.py
